perf(lint): :zap: improve eslint rules and extends

--- a/apps/b-api/.eslintrc.json
+++ b/apps/b-api/.eslintrc.json
@@ -4,6 +4,7 @@
   "overrides": [
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
+      "extends": ["@js-omar/eslint-config"],
       "rules": {}
     },
     {
