--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx serve",
     "build": "nx build",
-    "test": "nx test",
-    "cspell": "cspell"
+    "check:test": "nx run-many --target=test --all",
+    "check:lint": "nx run-many --target=lint --all",
+    "check:cspell": "cspell",
+    "check:format": "nx format:check",
+    "test": "npm run check:test && npm run check:lint && npm run check:cspell && npm run check:format"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +40,8 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "~14.0.0",
     "@angular/language-service": "~14.0.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "14.4.2",
@@ -59,8 +64,10 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
     "jest": "27.5.1",
     "jest-preset-angular": "~11.1.2",
+    "lint-staged": "^13.0.3",
     "nx": "14.4.2",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
