--- a/apps/m-admin/project.json
+++ b/apps/m-admin/project.json
@@ -1,20 +1,19 @@
 {
   "projectType": "application",
-  "sourceRoot": "apps/w-admin/src",
-  "prefix": "nitro",
+  "sourceRoot": "apps/m-admin/src",
+  "prefix": "m-admin",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/w-admin",
-        "index": "apps/w-admin/src/index.html",
-        "main": "apps/w-admin/src/main.ts",
-        "polyfills": "apps/w-admin/src/polyfills.ts",
-        "tsConfig": "apps/w-admin/tsconfig.app.json",
-        "inlineStyleLanguage": "scss",
-        "assets": ["apps/w-admin/src/favicon.ico", "apps/w-admin/src/assets"],
-        "styles": ["apps/w-admin/src/styles.scss"],
+        "outputPath": "dist/apps/m-admin",
+        "index": "apps/m-admin/src/index.html",
+        "main": "apps/m-admin/src/main.ts",
+        "polyfills": "apps/m-admin/src/polyfills.ts",
+        "tsConfig": "apps/m-admin/tsconfig.app.json",
+        "assets": ["apps/m-admin/src/favicon.ico", "apps/m-admin/src/assets"],
+        "styles": ["apps/m-admin/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
@@ -33,8 +32,8 @@
           ],
           "fileReplacements": [
             {
-              "replace": "apps/w-admin/src/environments/environment.ts",
-              "with": "apps/w-admin/src/environments/environment.prod.ts"
+              "replace": "apps/m-admin/src/environments/environment.ts",
+              "with": "apps/m-admin/src/environments/environment.prod.ts"
             }
           ],
           "outputHashing": "all"
@@ -54,38 +53,38 @@
       "executor": "@angular-devkit/build-angular:dev-server",
       "configurations": {
         "production": {
-          "browserTarget": "w-admin:build:production"
+          "browserTarget": "m-admin:build:production"
         },
         "development": {
-          "browserTarget": "w-admin:build:development"
+          "browserTarget": "m-admin:build:development"
         }
       },
       "defaultConfiguration": "development",
       "options": {
-        "port": 4001,
-        "proxyConfig": "apps/w-admin/proxy.conf.json"
+        "port": 4002,
+        "proxyConfig": "apps/m-admin/proxy.conf.json"
       }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
       "options": {
-        "browserTarget": "w-admin:build"
+        "browserTarget": "m-admin:build"
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["apps/w-admin/**/*.ts", "apps/w-admin/**/*.html"]
+        "lintFilePatterns": ["apps/m-admin/**/*.ts", "apps/m-admin/**/*.html"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/w-admin"],
+      "outputs": ["coverage/apps/m-admin"],
       "options": {
-        "jestConfig": "apps/w-admin/jest.config.ts",
+        "jestConfig": "apps/m-admin/jest.config.ts",
         "passWithNoTests": true
       }
     }
   },
-  "tags": []
+  "tags": ["mobile"]
 }
