--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
+    "autoprefixer": "^10.4.0",
     "cspell": "^6.2.3",
     "cypress": "^9.1.0",
     "eslint": "^8.19.0",
@@ -69,8 +70,10 @@
     "jest-preset-angular": "~11.1.2",
     "lint-staged": "^13.0.3",
     "nx": "14.4.2",
+    "postcss": "^8.4.5",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
