feat(tailwind): :sparkles: add tailwind to `w-admin` application & setup it

--- a/apps/m-admin/project.json
+++ b/apps/m-admin/project.json
@@ -12,6 +12,7 @@
         "main": "apps/m-admin/src/main.ts",
         "polyfills": "apps/m-admin/src/polyfills.ts",
         "tsConfig": "apps/m-admin/tsconfig.app.json",
+        "inlineStyleLanguage": "scss",
         "assets": ["apps/m-admin/src/favicon.ico", "apps/m-admin/src/assets"],
         "styles": ["apps/m-admin/src/styles.scss"],
         "scripts": []
