--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "start": "nx serve",
     "build": "nx build",
     "check:test": "nx run-many --target=test --all",
+    "check:e2e": "nx run-many --target=e2e --all",
     "check:lint": "nx run-many --target=lint --all",
     "check:cspell": "cspell",
     "check:format": "nx format:check",
-    "test": "npm run check:test && npm run check:lint && npm run check:cspell && npm run check:format"
+    "test": "npm run check:e2e && npm run check:test && npm run check:lint && npm run check:cspell && npm run check:format"
   },
   "private": true,
   "dependencies": {
@@ -52,6 +53,8 @@
     "@nrwl/nest": "14.4.2",
     "@nrwl/node": "14.4.2",
     "@nrwl/workspace": "14.4.2",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.3",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -74,6 +77,7 @@
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "tailwindcss": "^3.0.2",
+    "tailwindcss-rtl": "^0.9.0",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
