--- a/apps/w-admin/.eslintrc.json
+++ b/apps/w-admin/.eslintrc.json
@@ -9,6 +9,10 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+        "@angular-eslint/component-class-suffix": [
+          "error",
+          { "suffixes": ["Page", "Component"] }
+        ],
         "@angular-eslint/directive-selector": [
           "error",
           { "type": "attribute", "prefix": "wAdmin", "style": "camelCase" }
