--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "check:e2e": "nx run-many --target=e2e --all",
     "check:lint": "nx run-many --target=lint --all",
     "check:cspell": "cspell",
-    "check:format": "nx format:check",
+    "check:format": "nx format:check && prettier . --check",
     "test": "npm run check:e2e && npm run check:test && npm run check:lint && npm run check:cspell && npm run check:format"
   },
   "private": true,
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
     "@angular/router": "~14.0.0",
+    "@ionic/angular": "^6.1.13",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
@@ -43,6 +44,7 @@
     "@angular/language-service": "~14.0.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@ionic/angular-toolkit": "^6.1.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@nrwl/cli": "14.4.2",
