feat(m-admin): :sparkles: add android platform `m-admin` application

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -2,7 +2,9 @@
   "projects": {
     "m-admin": {
       "name": "m-admin",
-      "integrations": {},
+      "integrations": {
+        "capacitor": {}
+      },
       "type": "angular",
       "root": ""
     }
