--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -29,5 +29,5 @@
       "@nitro/api-interfaces": ["libs/api-interfaces/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": ["node_modules", "tmp", "android", "ios"]
 }
