--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "check:lint": "nx run-many --target=lint --all",
     "check:cspell": "cspell",
     "check:format": "nx format:check && prettier . --check",
-    "test": "npm run check:e2e && npm run check:test && npm run check:lint && npm run check:cspell && npm run check:format"
+    "test": "npm run check:test && npm run check:e2e && npm run check:lint && npm run check:cspell && npm run check:format"
   },
   "private": true,
   "dependencies": {
@@ -32,6 +32,12 @@
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
     "@angular/router": "~14.0.0",
+    "@capacitor/android": "3.6.0",
+    "@capacitor/app": "1.1.1",
+    "@capacitor/core": "3.6.0",
+    "@capacitor/haptics": "1.1.4",
+    "@capacitor/keyboard": "1.2.3",
+    "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.1.13",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
@@ -50,6 +56,7 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "~14.0.0",
     "@angular/language-service": "~14.0.0",
+    "@capacitor/cli": "3.6.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ionic/angular-toolkit": "^6.1.0",
@@ -70,6 +77,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
     "cspell": "^6.2.3",
     "cypress": "^9.1.0",
     "eslint": "^8.19.0",
