--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,12 @@
 {
+  "*.{css,less,sass,scss}": [
+    "stylelint",
+    "prettier --write",
+    "cspell -c cspell.json"
+  ],
   "*.{ts,js}": ["eslint --fix", "prettier --write", "cspell -c cspell.json"],
-  "!(*.{ts,js})": ["prettier --write --ignore-unknown", "cspell -c cspell.json"]
+  "!(*.{ts,js,css,less,sass,scss})": [
+    "prettier --write --ignore-unknown",
+    "cspell -c cspell.json"
+  ]
 }
