--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,7 +26,11 @@
     "preserveConstEnums": true,
     "baseUrl": ".",
     "paths": {
-      "@nitro/api-interfaces": ["libs/api-interfaces/src/index.ts"]
+      "@nitro/api-interfaces": ["libs/api-interfaces/src/index.ts"],
+      "@nitro/shared/dtos": ["libs/shared/dtos/src/index.ts"],
+      "@nitro/shared/enums": ["libs/shared/enums/src/index.ts"],
+      "@nitro/shared/interfaces": ["libs/shared/interfaces/src/index.ts"],
+      "@nitro/shared/utils": ["libs/shared/utils/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp", "android", "ios"]
