--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@ionic/angular": "^6.1.13",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/angular": "14.4.2",
     "reflect-metadata": "^0.1.13",
