--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,7 +36,9 @@
         "no-continue": "off",
         "no-await-in-loop": "off",
         "no-useless-constructor": "off",
-        "no-return-assign": "off"
+        "no-return-assign": "off",
+        "class-methods-use-this": "off",
+        "no-unused-vars": ["error"]
       }
     },
     {
@@ -53,7 +55,8 @@
           "error",
           { "allowExpressions": true }
         ],
-        "@typescript-eslint/no-empty-interface": "off"
+        "@typescript-eslint/no-empty-interface": "off",
+        "@typescript-eslint/no-unused-vars": ["error"]
       }
     },
     {
