--- a/apps/m-admin/project.json
+++ b/apps/m-admin/project.json
@@ -74,6 +74,7 @@
       "defaultConfiguration": "development",
       "options": {
         "port": 4002,
+        "disableHostCheck": true,
         "proxyConfig": "apps/m-admin/proxy.conf.json"
       }
     },
