--- a/apps/w-admin/project.json
+++ b/apps/w-admin/project.json
@@ -63,6 +63,7 @@
       "defaultConfiguration": "development",
       "options": {
         "port": 4001,
+        "disableHostCheck": true,
         "proxyConfig": "apps/w-admin/proxy.conf.json"
       }
     },
