chore: :see_no_evil: add sonar and scannerwork to gitignore

--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -2,11 +2,11 @@
   "*.{css,less,sass,scss}": [
     "stylelint",
     "prettier --write",
-    "cspell -c cspell.json"
+    "cspell -c ./cspell.json"
   ],
-  "*.{ts,js}": ["eslint --fix", "prettier --write", "cspell -c cspell.json"],
+  "*.{ts,js}": ["eslint --fix", "prettier --write", "cspell -c ./cspell.json"],
   "!(*.{ts,js,css,less,sass,scss})": [
     "prettier --write --ignore-unknown",
-    "cspell -c cspell.json"
+    "cspell -c ./cspell.json"
   ]
 }
