--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -15,6 +15,8 @@ jobs:
       # Get checkout
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       # Install Node js
       - name: Use Node.js
@@ -35,3 +37,18 @@ jobs:
       # Build application
       - name: Run Build
         run: npm run build
+
+      # Run Sonarqube
+      - name: Run Sonarqube
+        uses: sonarsource/sonarqube-scan-action@master # cspell:ignore sonarsource
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+      # If you wish to fail your job when the Quality Gate is red, uncomment the
+      # following lines. This would typically be used to fail a deployment.
+      - name: Sonarqube Fail If Has Error
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
