--- a/apps/w-admin/project.json
+++ b/apps/w-admin/project.json
@@ -39,6 +39,27 @@
           ],
           "outputHashing": "all"
         },
+        "staging": {
+          "budgets": [
+            {
+              "type": "initial",
+              "maximumWarning": "500kb",
+              "maximumError": "1mb"
+            },
+            {
+              "type": "anyComponentStyle",
+              "maximumWarning": "2kb",
+              "maximumError": "4kb"
+            }
+          ],
+          "fileReplacements": [
+            {
+              "replace": "apps/w-admin/src/environments/environment.ts",
+              "with": "apps/w-admin/src/environments/environment.staging.ts"
+            }
+          ],
+          "outputHashing": "all"
+        },
         "development": {
           "buildOptimizer": false,
           "optimization": false,
@@ -55,6 +76,9 @@
       "configurations": {
         "production": {
           "browserTarget": "w-admin:build:production"
+        },
+        "staging": {
+          "browserTarget": "w-admin:build:staging"
         },
         "development": {
           "browserTarget": "w-admin:build:development"
