feat(frontend-libs-home): :sparkles: add new UI frontend home library

--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "version": 2,
   "projects": {
     "b-api": "apps/b-api",
+    "frontend-home": "libs/frontend/home",
     "m-admin": "apps/m-admin",
     "m-admin-e2e": "apps/m-admin-e2e",
     "shared-dtos": "libs/shared/dtos",
