--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -26,6 +26,7 @@
     "preserveConstEnums": true,
     "baseUrl": ".",
     "paths": {
+      "@nitro/frontend/home": ["libs/frontend/home/src/index.ts"],
       "@nitro/shared/dtos": ["libs/shared/dtos/src/index.ts"],
       "@nitro/shared/enums": ["libs/shared/enums/src/index.ts"],
       "@nitro/shared/interfaces": ["libs/shared/interfaces/src/index.ts"],
