--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "ionic"
   ],
   "scripts": {
+    "prepare": "husky install",
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx run-many --target=serve --all",
@@ -37,6 +38,7 @@
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.6.0",
     "@capacitor/haptics": "1.1.4",
+    "@capacitor/ios": "3.6.0",
     "@capacitor/keyboard": "1.2.3",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.1.13",
@@ -109,6 +111,14 @@
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
     "typescript": "~4.7.2"
+  },
+  "overrides": {
+    "jasmine-marbles": {
+      "rxjs": "7.4.0"
+    },
+    "rxjs-for-await": {
+      "rxjs": "7.4.0"
+    }
   },
   "author": {
     "name": "Omar Elsayed",
