refactor(frontend): :recycle: move home and services modules to libraries

--- a/libs/frontend/home/project.json
+++ b/libs/frontend/home/project.json
@@ -19,6 +19,35 @@
           "libs/frontend/home/**/*.html"
         ]
       }
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "libs/frontend/home/.storybook",
+        "browserTarget": "frontend-home:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "outputDir": "dist/storybook/frontend-home",
+        "configDir": "libs/frontend/home/.storybook",
+        "browserTarget": "frontend-home:build-storybook",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
     }
   },
   "tags": ["frontend"]
