--- a/libs/frontend/home/tsconfig.json
+++ b/libs/frontend/home/tsconfig.json
@@ -3,8 +3,15 @@
   "files": [],
   "include": [],
   "references": [
-    { "path": "./tsconfig.lib.json" },
-    { "path": "./tsconfig.spec.json" }
+    {
+      "path": "./tsconfig.lib.json"
+    },
+    {
+      "path": "./tsconfig.spec.json"
+    },
+    {
+      "path": "./.storybook/tsconfig.json"
+    }
   ],
   "compilerOptions": {
     "target": "es2020",
