--- a/angular.json
+++ b/angular.json
@@ -4,10 +4,14 @@
   "projects": {
     "b-api": "apps/b-api",
     "frontend-home": "libs/frontend/home",
+    "frontend-home-e2e": "apps/frontend-home-e2e",
+    "frontend-services": "libs/frontend/services",
+    "frontend-services-e2e": "apps/frontend-services-e2e",
     "m-admin": "apps/m-admin",
     "m-admin-e2e": "apps/m-admin-e2e",
     "shared-dtos": "libs/shared/dtos",
     "shared-enums": "libs/shared/enums",
+    "shared-interceptors": "libs/shared/interceptors",
     "shared-interfaces": "libs/shared/interfaces",
     "shared-utils": "libs/shared/utils",
     "w-admin": "apps/w-admin",
