--- a/package.json
+++ b/package.json
@@ -73,7 +73,13 @@
     "@nrwl/linter": "14.4.2",
     "@nrwl/nest": "14.4.2",
     "@nrwl/node": "14.4.2",
+    "@nrwl/storybook": "14.4.2",
     "@nrwl/workspace": "14.4.2",
+    "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/angular": "~6.5.9",
+    "@storybook/builder-webpack5": "~6.5.9",
+    "@storybook/core-server": "~6.5.9",
+    "@storybook/manager-webpack5": "~6.5.9",
     "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/typography": "^0.5.3",
     "@types/jest": "27.4.1",
@@ -110,7 +116,8 @@
     "tailwindcss-rtl": "^0.9.0",
     "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
-    "typescript": "~4.7.2"
+    "typescript": "~4.7.2",
+    "webpack": "^5.64.0"
   },
   "overrides": {
     "jasmine-marbles": {
