--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^8.0.0",
     "@nrwl/angular": "14.4.2",
+    "angular-animations": "^0.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
@@ -75,7 +76,9 @@
     "@nrwl/node": "14.4.2",
     "@nrwl/storybook": "14.4.2",
     "@nrwl/workspace": "14.4.2",
+    "@storybook/addon-a11y": "^6.5.9",
     "@storybook/addon-essentials": "~6.5.9",
+    "@storybook/addon-storysource": "^6.5.9",
     "@storybook/angular": "~6.5.9",
     "@storybook/builder-webpack5": "~6.5.9",
     "@storybook/core-server": "~6.5.9",
@@ -105,6 +108,7 @@
     "postcss": "^8.4.5",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
+    "storybook-addon-angular-router": "^1.6.0",
     "stylelint": "^14.9.1",
     "stylelint-config-idiomatic-order": "^8.1.0",
     "stylelint-config-prettier": "^9.0.3",
