--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -28,6 +28,7 @@
     "paths": {
       "@nitro/frontend/home": ["libs/frontend/home/src/index.ts"],
       "@nitro/frontend/services": ["libs/frontend/services/src/index.ts"],
+      "@nitro/shared/constants": ["libs/shared/constants/src/index.ts"],
       "@nitro/shared/dtos": ["libs/shared/dtos/src/index.ts"],
       "@nitro/shared/enums": ["libs/shared/enums/src/index.ts"],
       "@nitro/shared/interceptors": ["libs/shared/interceptors/src/index.ts"],
@@ -35,5 +36,11 @@
       "@nitro/shared/utils": ["libs/shared/utils/src/index.ts"]
     }
   },
-  "exclude": ["node_modules", "tmp", "android", "ios"]
+  "exclude": ["node_modules", "tmp", "android", "ios"],
+  "angularCompilerOptions": {
+    "enableI18nLegacyMessageIdFormat": false,
+    "strictInjectionParameters": true,
+    "strictInputAccessModifiers": true,
+    "strictTemplates": true
+  }
 }
