build(core): :arrow_up: update all npm package dependencies

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "source.fixAll.format": true
   },
   "conventionalCommits.scopes": [
+    "core",
     "lint",
     "tailwind",
     "m-admin",
