--- a/package.json
+++ b/package.json
@@ -26,14 +26,14 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~14.0.0",
-    "@angular/common": "~14.0.0",
-    "@angular/compiler": "~14.0.0",
-    "@angular/core": "~14.0.0",
-    "@angular/forms": "~14.0.0",
-    "@angular/platform-browser": "~14.0.0",
-    "@angular/platform-browser-dynamic": "~14.0.0",
-    "@angular/router": "~14.0.0",
+    "@angular/animations": "~14.0.6",
+    "@angular/common": "~14.0.6",
+    "@angular/compiler": "~14.0.6",
+    "@angular/core": "~14.0.6",
+    "@angular/forms": "~14.0.6",
+    "@angular/platform-browser": "~14.0.6",
+    "@angular/platform-browser-dynamic": "~14.0.6",
+    "@angular/router": "~14.0.6",
     "@capacitor/android": "3.6.0",
     "@capacitor/app": "1.1.1",
     "@capacitor/core": "3.6.0",
@@ -41,32 +41,32 @@
     "@capacitor/ios": "3.6.0",
     "@capacitor/keyboard": "1.2.3",
     "@capacitor/status-bar": "1.0.8",
-    "@ionic/angular": "^6.1.13",
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/mapped-types": "*",
-    "@nestjs/platform-express": "^8.0.0",
+    "@ionic/angular": "^6.1.14",
+    "@nestjs/common": "^9.0.3",
+    "@nestjs/core": "^9.0.3",
+    "@nestjs/mapped-types": "1.1.0",
+    "@nestjs/platform-express": "^9.0.3",
     "@nrwl/angular": "14.4.3",
     "angular-animations": "^0.11.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~7.4.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.6"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.0.0",
-    "@angular-eslint/eslint-plugin": "~14.0.0",
-    "@angular-eslint/eslint-plugin-template": "~14.0.0",
-    "@angular-eslint/template-parser": "~14.0.0",
-    "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "~14.0.0",
-    "@angular/language-service": "~14.0.0",
+    "@angular-devkit/build-angular": "~14.0.6",
+    "@angular-eslint/eslint-plugin": "~14.0.2",
+    "@angular-eslint/eslint-plugin-template": "~14.0.2",
+    "@angular-eslint/template-parser": "~14.0.2",
+    "@angular/cli": "~14.0.6",
+    "@angular/compiler-cli": "~14.0.6",
+    "@angular/language-service": "~14.0.6",
     "@capacitor/cli": "3.6.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@ionic/angular-toolkit": "^6.1.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
+    "@nestjs/schematics": "^9.0.1",
+    "@nestjs/testing": "^9.0.3",
     "@nrwl/cli": "14.4.3",
     "@nrwl/cypress": "14.4.3",
     "@nrwl/eslint-plugin-nx": "14.4.3",
@@ -84,28 +84,28 @@
     "@storybook/core-server": "~6.5.9",
     "@storybook/manager-webpack5": "~6.5.9",
     "@tailwindcss/forms": "^0.5.2",
-    "@tailwindcss/typography": "^0.5.3",
-    "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "autoprefixer": "^10.4.0",
+    "@tailwindcss/typography": "^0.5.4",
+    "@types/jest": "28.1.6",
+    "@types/node": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
+    "autoprefixer": "^10.4.7",
     "cross-env": "^7.0.3",
     "cspell": "^6.2.3",
-    "cypress": "^9.1.0",
+    "cypress": "^9.7.0",
     "eslint": "^8.19.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-sonarjs": "^0.13.0",
     "husky": "^8.0.1",
-    "jest": "27.5.1",
-    "jest-preset-angular": "~11.1.2",
+    "jest": "28.1.3",
+    "jest-preset-angular": "~12.2.0",
     "lint-staged": "^13.0.3",
     "nx": "14.4.3",
-    "postcss": "^8.4.5",
+    "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
     "storybook-addon-angular-router": "^1.6.0",
@@ -115,21 +115,13 @@
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-sass-guidelines": "^9.0.1",
     "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^4.0.0",
-    "tailwindcss": "^3.0.2",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "tailwindcss": "^3.1.6",
     "tailwindcss-rtl": "^0.9.0",
-    "ts-jest": "27.1.4",
-    "ts-node": "~10.8.0",
-    "typescript": "~4.7.2",
-    "webpack": "^5.64.0"
-  },
-  "overrides": {
-    "jasmine-marbles": {
-      "rxjs": "7.4.0"
-    },
-    "rxjs-for-await": {
-      "rxjs": "7.4.0"
-    }
+    "ts-jest": "28.0.6",
+    "ts-node": "~10.9.1",
+    "typescript": "~4.7.4",
+    "webpack": "^5.73.0"
   },
   "author": {
     "name": "Omar Elsayed",
