--- a/package.json
+++ b/package.json
@@ -47,6 +47,10 @@
     "@nestjs/mapped-types": "1.1.0",
     "@nestjs/platform-express": "^9.0.3",
     "@nrwl/angular": "14.4.3",
+    "@sentry/angular": "^7.7.0",
+    "@sentry/minimal": "^6.19.7",
+    "@sentry/node": "^7.7.0",
+    "@sentry/tracing": "^7.7.0",
     "angular-animations": "^0.11.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.6",
