test(libs): :white_check_mark: update test and correct it

--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "prepare": "husky install",
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
-    "start": "nx run-many --target=serve --all",
-    "build": "nx run-many --target=build --all",
+    "start": "nx run-many --target=serve --all --parallel=false",
+    "build": "nx run-many --target=build --all --parallel=false",
     "check:test": "nx run-many --target=test --all",
-    "check:e2e": "nx run-many --target=e2e --all",
+    "check:e2e": "nx run-many --target=e2e --all --parallel=false",
     "check:lint": "nx run-many --target=lint --all",
     "check:cspell": "cspell",
     "check:format": "nx format:check && prettier . --check",
