--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=nitro
+sonar.organization=nitro-system
 sonar.projectName=nitro
-sonar.login=sqp_ac9f7b21cf7a4015aa8c0643395961c65f0fba5b
-sonar.host.url=http://localhost:9000
+sonar.projectVersion=1.0
 sonar.exclusions=android/**/*,ios/**/*
