--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=nitro
 sonar.organization=nitro-system
 sonar.projectName=nitro
-sonar.projectVersion=1.0
+sonar.projectVersion=latest
 sonar.exclusions=android/**/*,ios/**/*
