--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -49,7 +49,7 @@ jobs:
       # Get Package.json Version
       - name: Get Package.json Version
         id: package-version
-        uses: martinbeentjes/npm-get-version-action@semantic-release/changelog # cspell:ignore martinbeentjes
+        uses: martinbeentjes/npm-get-version-action@main # cspell:ignore martinbeentjes
 
       # Create Sentry Release For Web Admin
       - name: Create Sentry release
