--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -62,6 +62,7 @@ jobs:
           environment: staging
           sourcemaps: ./dist/apps/w-admin
           version: ${{ steps.package-version.outputs.current-version }}-staging
+          ignore_empty: true
 
       # Create Sentry Release For Mobile Admin
       - name: Create Sentry release
@@ -74,6 +75,7 @@ jobs:
           environment: staging
           sourcemaps: ./dist/apps/m-admin
           version: ${{ steps.package-version.outputs.current-version }}-staging
+          ignore_empty: true
 
       # Create Sentry Release For Backend Api
       - name: Create Sentry release
@@ -86,6 +88,7 @@ jobs:
           environment: staging
           sourcemaps: ./dist/apps/b-api
           version: ${{ steps.package-version.outputs.current-version }}-staging
+          ignore_empty: true
 
       # Checkout Develop
       - name: Checkout Develop
