--- a/.releaserc.json
+++ b/.releaserc.json
@@ -5,6 +5,7 @@
     "@semantic-release/release-notes-generator",
     ["@semantic-release/changelog", { "changelogFile": "CHANGELOG.md" }],
     ["@semantic-release/exec", { "prepareCmd": "prettier . --write" }],
+    ["@semantic-release/npm", { "npmPublish": false }],
     [
       "@semantic-release/git",
       {
